--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,14 +24,14 @@ jobs:
         with:
           python-version: "3.12"
           cache: pip
-      - name: Install dev tools (ruff, mypy, stubs)
-        run: pip install .[dev] mypy
+      - name: Install package with dev and test dependencies
+        run: pip install -e '.[dev,test]'
       - name: Ruff check
         run: ruff check .
       - name: Ruff format check
         run: ruff format --check .
       - name: Mypy type check
-        run: mypy django_celery_outbox
+        run: mypy -p django_celery_outbox --config-file=pyproject.toml
 
   test:
     name: Python ${{ matrix.python-version }} - Django ${{ matrix.django }}
@@ -50,11 +50,9 @@ jobs:
           cache: pip
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
-      - name: Install Django
+      - name: Install package with test dependencies
+        run: pip install -e '.[test]'
+      - name: Install Django version
         run: pip install "Django~=${{ matrix.django }}"
-      - name: Install package (editable)
-        run: python -m pip install -e .
-      - name: Install test dependencies
-        run: pip install pytest pytest-django
       - name: Run tests
-        run: pytest tests/ -v
+        run: pytest -v
